:bug: Fix vertical align on profile page

--- a/assets/styles/pages/_profile.scss
+++ b/assets/styles/pages/_profile.scss
@@ -90,6 +90,7 @@
         color: #000000;
         padding: 8px 20px;
         border-radius: 3px;
+        vertical-align: top;
         @include font-props(14,400);
 
         @include lg {
